syntax = "proto3";

package myassembly.v1;

import "google/protobuf/empty.proto";

message User {
  string id = 1;
  string name = 2;
  string icon = 3;
  int64 created_at = 4;
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  User user = 1;
}

message CreateUserRequest {
  User user = 1;
}

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
  rpc CreateUser(CreateUserRequest) returns (google.protobuf.Empty) {}
}
